#生成可执行文件
add_executable(logFormatterTest logFormatterTest.cc )
add_executable(LogAppenderTest LogAppenderTest.cc)
add_executable(ConditionTest ConditionTest.cc)
add_executable(ThreadTest ThreadTest.cc)
add_executable(AsynLogAppendTest AsynLogAppendTest.cc)
add_executable(LoggerTest LoggerTest.cc)
add_executable(ThreadPoolTest ThreadPoolTest.cc)
add_executable(TomlTest TomlTest.cc)
add_executable(ConfigTest ConfigTest.cc)
add_executable(DateTimeTest DateTimeTest.cc)
add_executable(UtilTest UtilTest.cc)
add_executable(EventLoopTest EventLoopTest.cc)
add_executable(TimerTest TimerTest.cc)
add_executable(HookTest HookTest.cc)

#链接动态库
target_link_libraries(logFormatterTest netbus)
target_link_libraries(LogAppenderTest netbus)
target_link_libraries(ConditionTest netbus)
target_link_libraries(ThreadTest netbus)
target_link_libraries(AsynLogAppendTest netbus)
target_link_libraries(LoggerTest netbus)
target_link_libraries(ThreadPoolTest netbus)
target_link_libraries(ConfigTest netbus)
target_link_libraries(DateTimeTest netbus)
target_link_libraries(UtilTest netbus)
target_link_libraries(EventLoopTest netbus)
target_link_libraries(TimerTest netbus)
target_link_libraries(HookTest netbus)